log
Thu 05 Oct 2023 04:26:26 AM UTC: 
 tests:  0|5
total_score: 0/70
cfcb7ef
Thu 05 Oct 2023 06:25:55 AM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:5: error: expected expression before ‘}’ token
   73 |     }
      |     ^
sudoku.c:72:15: error: unused variable ‘j’ [-Werror=unused-variable]
   72 |       for(int j=0;i<9;i++)
      |               ^
sudoku.c:74:18: error: ‘i’ undeclared (first use in this function)
   74 |       if(n->sudo[i][j]==0)
      |                  ^
sudoku.c:74:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:74:21: error: ‘j’ undeclared (first use in this function)
   74 |       if(n->sudo[i][j]==0)
      |                     ^
sudoku.c:79:1: error: control reaches end of non-void function [-Werror=return-type]
   79 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
36d5dc3
Thu 05 Oct 2023 06:54:16 AM UTC: 
 sudoku.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a71a9a
Thu 05 Oct 2023 06:56:31 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bb9a522
Thu 05 Oct 2023 06:57:04 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2c62564
Thu 05 Oct 2023 06:57:56 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a36bdd5
Thu 05 Oct 2023 06:58:39 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e08c5a8
Thu 05 Oct 2023 06:58:59 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
32ab92e
Thu 05 Oct 2023 06:59:17 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
17d8822
Thu 05 Oct 2023 06:59:29 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7380f1f
Thu 05 Oct 2023 06:59:36 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9e3b6ed
Thu 05 Oct 2023 06:59:47 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ce3c73e
Thu 05 Oct 2023 07:04:52 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:78:13: error: ‘copia’ undeclared (first use in this function)
   78 |             copia->sudo[i][j]=num;
      |             ^~~~~
sudoku.c:78:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2be5425
Thu 05 Oct 2023 07:06:52 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
4d673f6
Thu 05 Oct 2023 07:09:33 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3c7d95c
Thu 05 Oct 2023 07:12:14 AM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
8ddd04d
Thu 05 Oct 2023 07:12:40 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
0ebe948
Thu 05 Oct 2023 07:20:57 AM UTC: 
 sudoku.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
1bd965c
Thu 05 Oct 2023 07:21:13 AM UTC: 
 sudoku.c | 19 +------------------
 1 file changed, 1 insertion(+), 18 deletions(-)
test.c: In function ‘adj_test1’:
test.c:62:17: error: implicit declaration of function ‘get_adj_nodes’ [-Werror=implicit-function-declaration]
   62 |     List* adj = get_adj_nodes(initial);
      |                 ^~~~~~~~~~~~~
test.c:62:17: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:95:9: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   95 |     adj = get_adj_nodes(initial);
      |         ^
test.c: In function ‘test_mod_adj’:
test.c:155:17: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  155 |     List* adj = get_adj_nodes(initial);
      |                 ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7433f1a
Thu 05 Oct 2023 07:22:57 AM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
3df61b4
Thu 05 Oct 2023 07:23:50 AM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7a92d6a
Thu 05 Oct 2023 07:24:24 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
7e48a5f
Thu 05 Oct 2023 07:25:11 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9d3f0a0
Thu 05 Oct 2023 07:28:48 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
6de2a7b
Thu 05 Oct 2023 07:29:08 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
9ab0eca
Thu 05 Oct 2023 07:29:43 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
5e975ea
Thu 05 Oct 2023 07:31:39 AM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
fc263dd
Thu 05 Oct 2023 07:32:22 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
21d302a
Thu 05 Oct 2023 07:32:35 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
c5b727d
Thu 05 Oct 2023 07:32:45 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7dd52db
Thu 05 Oct 2023 07:33:16 AM UTC: 
 sudoku.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
db45a87
Thu 05 Oct 2023 07:34:07 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3e8cfe4
Thu 05 Oct 2023 07:35:17 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
17609b7
Thu 05 Oct 2023 08:00:33 AM UTC: 
 sudoku.c | 52 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 52 insertions(+)
 tests:  2|4
total_score: 15/70
bfd66f1
Thu 05 Oct 2023 08:01:05 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
3e93fcc
Sun 08 Oct 2023 05:53:47 AM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
97a540f
